# JOB-20260602150624-000064

./: .gitignore  README.md  SPEC.md
backend/nestjs/: .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  package.json  tsconfig.json
backend/python/: .env.example  Dockerfile  Dockerfile.dev  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/python/migrations/versions/: 001_initial_migration.py
backend/python/src/: __init__.py  config.py  database.py  main.py
backend/python/src/api/: __init__.py
backend/python/src/api/v1/: __init__.py  health.py  listings.py  payments.py  users.py  webhooks.py
backend/python/src/integrations/ageVerification/: __init__.py  bluecheck_client.py  ondato_client.py  yoti_client.py
backend/python/src/integrations/crm/: __init__.py  hubspot_client.py  mautic_client.py  pipedrive_client.py
backend/python/src/integrations/payments/: __init__.py  ccbill_client.py  paxum_client.py  webhook_handler.py
backend/python/src/middleware/: __init__.py  auth.py  logging.py  request_id.py
backend/python/src/models/: __init__.py  audit_log.py  base.py  listing.py  payment.py  user.py
backend/python/src/processing/: __init__.py  analytics.py  image_processor.py  search_indexer.py
backend/python/src/schemas/: __init__.py  audit_log.py  listing.py  payment.py  user.py
backend/python/src/services/: __init__.py  listing_service.py  notification_service.py  payment_service.py  user_service.py
backend/python/src/utils/: __init__.py  formatters.py  security.py  validators.py
backend/python/src/workers/: __init__.py  celery_app.py  scheduled.py  tasks.py
backend/python/tests/: conftest.py  test_integration.py  test_listings.py  test_payments.py  test_users.py
ci/.github/: CODEOWNERS  dependabot.yml
ci/scripts/: deploy-ecs.sh  health-check.sh  run-migrations.sh  slack-notify.sh  snyk-scan.sh  terraform.sh
docs/drbcp/: backup-procedures.md  dr-procedures.md
docs/security/: security-protocols.md
frontend/: .eslintrc.json  .prettierrc  Dockerfile  docker-compose.yml  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/environments/: prod.tfvars
observability/alerting/: alert-rules.yml
observability/prometheus/: alerts.yml  prometheus.yml
(+143 files in other folders)
